catalan (ca) l10n. jordi serratosa's work

--- a/ca/browser/chrome/browser/browser.properties
+++ b/ca/browser/chrome/browser/browser.properties
@@ -98,6 +98,11 @@ popupWarningDontShowFromMessage=No mostris aquest missatge quan les finestres em
 popupWarningDontShowFromLocationbar=No mostris la barra d'informació quan les finestres emergents estiguin blocades
 popupShowPopupPrefix=Mostra «%S»
 
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
+badContentBlocked.blocked.message=El %S ha blocat contingut d'aquesta pàgina.
+badContentBlocked.notblocked.message=El %S no ha blocat cap contingut d'aquesta pàgina.
+
 # missing plugin installer
 installPlugin.message = Voleu instal·lar el complement necessari per mostrar els continguts multimèdia d'aquesta pàgina?
 installPlugin.button.label=Instal·la %S
@@ -251,7 +256,7 @@ bookmarksMenuButton.tooltip=Mostra les adreces d'interès (%S)
 starButtonOn.tooltip2=Edita l'adreça d'interès (%S)
 starButtonOff.tooltip2=Afegeix la pàgina a les adreces d'interès (%S)
 starButtonOverflowed.label=Afegeix a les adreces d'interès
-starButtonOverflowedStarred.label=Edit This Bookmark
+starButtonOverflowedStarred.label=Edita l'adreça d'interès
 
 # Downloads button tooltip
 # LOCALIZATION NOTE (downloads.tooltip):
@@ -444,6 +449,12 @@ webapps.install.accesskey = I
 webapps.requestInstall = Voleu instal·lar «%1$S» des d'aquest lloc (%2$S)?
 webapps.install.success = S'ha instal·lat l'aplicació
 webapps.install.inprogress = Instal·lació en curs
+webapps.uninstall = Desinstal·la
+webapps.uninstall.accesskey = D
+webapps.doNotUninstall = No la desinstal·lis
+webapps.doNotUninstall.accesskey = N
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = Voleu desinstal·lar l'aplicació «%1$S»?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S està ara a pantalla completa.
@@ -504,10 +515,24 @@ getUserMedia.shareMicrophone.message = Voleu compartir el micròfon amb %S?
 getUserMedia.shareScreen.message = Voleu compartir la vostra pantalla amb %S?
 getUserMedia.shareCameraAndMicrophone.message = Voleu compartir la càmera i el micròfon amb %S?
 getUserMedia.shareScreenAndMicrophone.message = Voleu compartir el micròfon i la pantalla amb %S?
+getUserMedia.selectWindow.label=Finestra per compartir:
+getUserMedia.selectWindow.accesskey=F
+getUserMedia.selectScreen.label=Pantalla per compartir:
+getUserMedia.selectScreen.accesskey=P
+getUserMedia.selectApplication.label=Aplicació per compartir:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Sense vídeo
-getUserMedia.noWindowOrScreen.label = Sense finestra ni pantalla
+getUserMedia.noApplication.label = Cap aplicació
+getUserMedia.noScreen.label = Cap pantalla
+getUserMedia.noWindow.label = Cap finestra
 getUserMedia.noAudio.label = Sense àudio
 getUserMedia.shareEntireScreen.label = Pantalla sencera
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 finestra);#1 (#2 finestres)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -515,6 +540,7 @@ getUserMedia.shareEntireScreen.label = Pantalla sencera
 getUserMedia.shareSelectedDevices.label = Comparteix el dispositiu seleccionat;Comparteix els dispositius seleccionats
 getUserMedia.shareSelectedDevices.accesskey = C
 getUserMedia.shareScreen.label = Comparteix la pantalla
+getUserMedia.shareApplication.label = Comparteix l'aplicació seleccionada
 getUserMedia.shareWindow.label = Comparteix la finestra seleccionada
 getUserMedia.shareSelectedItems.label = Comparteix els elements seleccionats
 getUserMedia.always.label = Comparteix sempre
@@ -526,6 +552,7 @@ getUserMedia.never.accesskey = m
 getUserMedia.sharingCamera.message2 = Esteu compartint la càmera amb aquesta pàgina.
 getUserMedia.sharingMicrophone.message2 = Esteu compartint el micròfon amb aquesta pàgina.
 getUserMedia.sharingCameraAndMicrophone.message2 = Esteu compartint la càmera i el micròfon amb aquesta pàgina.
+getUserMedia.sharingApplication.message = Esteu compartint una aplicació amb aquesta pàgina.
 getUserMedia.sharingScreen.message = Esteu compartint la vostra pantalla amb aquesta pàgina.
 getUserMedia.sharingWindow.message = Esteu compartint una finestra amb aquesta pàgina.
 getUserMedia.continueSharing.label = Continua compartint
@@ -533,13 +560,34 @@ getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Deixa de compartir
 getUserMedia.stopSharing.accesskey = D
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = El %S ha blocat contingut que no és segur.
-mixedContentBlocked.keepBlockingButton.label = Mantén el blocatge
-mixedContentBlocked.keepBlockingButton.accesskey = b
-mixedContentBlocked.unblock.label = Inhabilita la protecció en aquesta pàgina
-mixedContentBlocked.unblock.accesskey = I
+getUserMedia.sharingMenu.label = Pestanyes que comparteixen dispositius
+getUserMedia.sharingMenu.accesskey = d
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+getUserMedia.sharingMenuCamera = %S (càmera)
+getUserMedia.sharingMenuMicrophone = %S (micròfon)
+getUserMedia.sharingMenuApplication = %S (aplicació)
+getUserMedia.sharingMenuScreen = %S (pantalla)
+getUserMedia.sharingMenuWindow = %S (finestra)
+getUserMedia.sharingMenuCameraMicrophone = %S (càmera i micròfon)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (càmera, micròfon i aplicació)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (càmera, micròfon i pantalla)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (càmera, micròfon i finestra)
+getUserMedia.sharingMenuMicrophoneApplication = %S (micròfon i aplicació)
+getUserMedia.sharingMenuMicrophoneScreen = %S (micròfon i pantalla)
+getUserMedia.sharingMenuMicrophoneWindow = %S (micròfon i finestra)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
+getUserMedia.sharingMenuUnknownHost = Origen desconegut
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = El %S s'inicia lentament.
