--- a/ca/browser/chrome/browser/devtools/toolbox.properties
+++ b/ca/browser/chrome/browser/devtools/toolbox.properties
@@ -43,6 +43,10 @@ toolbox.label=Eines per a desenvolupadors
 # for the options panel tab.
 optionsButton.tooltip=Opcions de les eines
 
+# LOCALIZATION NOTE (options.label): This is used as the label of the tab in
+# the devtools window.
+options.label=Opcions
+
 # LOCALIZATION NOTE (options.panelLabel): This is used as the label for the
 # toolbox panel.
 options.panelLabel=Subfinestra Opcions de les eines
@@ -66,3 +70,11 @@ browserConsoleCmd.commandkey=j
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
 pickButton.tooltip=Seleccioneu un element de la pàgina
+
+# LOCALIZATION NOTE (options.darkTheme.label)
+# Used as a label for dark theme
+options.darkTheme.label=Tema fosc
+
+# LOCALIZATION NOTE (options.lightTheme.label)
+# Used as a label for light theme
+options.lightTheme.label=Tema clar
