--- a/ca/browser/chrome/browser/devtools/webconsole.properties
+++ b/ca/browser/chrome/browser/devtools/webconsole.properties
@@ -53,7 +53,7 @@ NetworkPanel.durationMS=%Sms
 # %1$S is the width of the inspected image, %2$S is the height of the
 # inspected image, %3$S is the duration between the response header and the
 # response body event. Example: 150x100px, Δ50ms.
-NetworkPanel.imageSizeDeltaDurationMS=%Sx%Spx, Δ%Sms
+NetworkPanel.imageSizeDeltaDurationMS=%1$Sx%2$Spx, Δ%3$Sms
 
 # LOCALIZATION NOTE (NetworkPanel.responseBodyUnableToDisplay.content): this
 # string is displayed within the response body section of the NetworkPanel if
@@ -230,7 +230,7 @@ cdFunctionInvalidArgument=No es pot executar cd() en la finestra indicada. L'arg
 # LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
 # a new user of the developer tools pastes code into the console
 # %1 is the text of selfxss.okstring
-selfxss.msg=Avís de frau: Aneu en compte quan enganxeu coses que no enteneu. Això podria permetre als atacants robar la vostra identitat o prendre el control de l'ordinador. Escriviu «%S» a continuació (no cal prémer Intro) per poder enganxar.
+selfxss.msg=Avís de frau: Aneu amb compte quan enganxeu coses que no enteneu. Això podria permetre als atacants robar la vostra identitat o prendre el control de l'ordinador. Escriviu «%S» a continuació (no cal prémer Intro) per poder enganxar.
 
 # LOCALIZATION NOTE (selfxss.msg): the string to be typed
 # in by a new user of the developer tools when they receive the sefxss.msg prompt.
@@ -241,3 +241,19 @@ selfxss.okstring=permet enganxar
 # you hover the arrow for expanding/collapsing the message details. For
 # console.error() and other messages we show the stacktrace.
 messageToggleDetails=Mostra/amaga els detalls del missatge.
+
+# LOCALIZATION NOTE (emptySlotLabel): the text is displayed when an Array
+# with empty slots is printed to the console.
+# This is a semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of empty slots
+# example: 1 empty slot
+# example: 5 empty slots
+emptySlotLabel=#1 espai buit;#1 espais buits
+
+# LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
+# the column header displayed in the console table widget.
+table.index=(índex)
+table.iterationIndex=(índex d'iteració)
+table.key=Clau
+table.value=Valors
