--- a/ca/browser/chrome/browser/preferences/preferences.properties
+++ b/ca/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Les galetes següents estan emmagatzemades al vostre ordinador:
 cookiesFiltered=Les galetes següents coincideixen amb la vostra cerca:
 
 #### Offline apps
+offlineAppsList.height=8em
 offlineAppRemoveTitle=Suprimeix les dades de llocs web fora de línia
 offlineAppRemovePrompt=Després de suprimir aquestes dades, %S no estarà disponible fora de línia. Esteu segur que voleu suprimir aquest lloc web fora de línia?
 offlineAppRemoveConfirm=Suprimeix les dades fora de línia
