--- a/ca/browser/chrome/browser/syncSetup.properties
+++ b/ca/browser/chrome/browser/syncSetup.properties
@@ -56,7 +56,7 @@ disconnect.verify.title = Desconnecta
 disconnect.verify.heading = N'esteu segur?
 # LOCALIZATION NOTE (disconnect.verify.description): %S will be replaced with
 # brandShortName
-disconnect.verify.description = %S deixarà de sincronitzar-se amb el vostre compte, però les vostres dades de navegació d'aquest ordinador no s'eliminaran.
+disconnect.verify.description = El %S deixarà de sincronitzar-se amb el vostre compte, però les vostres dades de navegació d'aquest ordinador no s'eliminaran.
 
 relinkVerify.title = Avís de combinació
 relinkVerify.heading = Esteu segur que voleu iniciar la sessió al Sync?
