--- a/ca/browser/chrome/browser/webrtcIndicator.properties
+++ b/ca/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Indicador de compartició
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Esteu compartint la càmera i el micròfon. Feu clic aquí per controlar què voleu compartir.
 webrtcIndicator.sharingCamera.tooltip              = Esteu compartint la càmera. Feu clic aquí per controlar què voleu compartir.
 webrtcIndicator.sharingMicrophone.tooltip          = Esteu compartint el micròfon. Feu clic aquí per controlar què voleu compartir.
+webrtcIndicator.sharingApplication.tooltip = Esteu compartint una aplicació. Feu clic aquí per controlar què voleu compartir.
 webrtcIndicator.sharingScreen.tooltip = Esteu compartint la pantalla. Feu clic aquí per controlar què voleu compartir.
 webrtcIndicator.sharingWindow.tooltip = Esteu compartint una finestra. Feu clic aquí per controlar què voleu compartir.
 
@@ -23,14 +24,29 @@ webrtcIndicator.sharingWindow.tooltip = Esteu compartint una finestra. Feu clic 
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = S'està compartint la càmera amb «%S»
 webrtcIndicator.sharingMicrophoneWith.menuitem = S'està compartint el micròfon amb «%S»
+webrtcIndicator.sharingApplicationWith.menuitem = S'està compartint una aplicació amb «%S»
 webrtcIndicator.sharingScreenWith.menuitem = S'està compartint la pantalla amb «%S»
 webrtcIndicator.sharingWindowWith.menuitem = S'està compartint una finestra amb «%S»
 webrtcIndicator.controlSharing.menuitem = Control de compartició
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = S'està compartint la càmera amb #1 pestanya;S'està compartint la càmera amb #1 pestanyes
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = S'està compartint el micròfon amb #1 pestanya;S'està compartint el micròfon amb #1 pestanyes
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = S'està compartint una aplicació amb #1 pestanya;S'està compartint una aplicació amb #1 pestanyes
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = S'està compartint la pantalla amb #1 pestanya;S'està compartint la pantalla amb #1 pestanyes
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = S'està compartint una finestra amb #1 pestanya;S'està compartint una finestra amb #1 pestanyes
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
