--- a/ca/dom/chrome/accessibility/AccessFu.properties
+++ b/ca/dom/chrome/accessibility/AccessFu.properties
@@ -7,11 +7,11 @@ screenReaderStarted = S'ha iniciat el lector de pantalla
 screenReaderStopped = S'ha aturat el lector de pantalla
 
 # Roles
-menubar        =       Barra del menú
-scrollbar      =       Barra de desplaçament
-grip           =       Control
-alert          =       Notifica
-menupopup      =       Missatge emergent
+menubar        =       barra de menú
+scrollbar      =       barra de desplaçament
+grip           =       control
+alert          =       alerta
+menupopup      =       menú emergent
 document       =       document
 pane           =       tauler
 dialog         =       diàleg
@@ -26,7 +26,7 @@ row            =       fila
 cell           =       cel·la
 link           =       enllaç
 list           =       llista
-listitem       =       element de la llista
+listitem       =       element de llista
 outline        =       contorn
 outlineitem    =       element de contorn
 pagetab        =       pestanya
@@ -43,16 +43,16 @@ diagram        =       diagrama
 animation      =       animació
 equation       =       equació
 buttonmenu     =       botó de menú
-whitespace     =       espai flexible
+whitespace     =       espai en blanc
 pagetablist    =       llista de pestanyes
 canvas         =       llenç
 checkmenuitem  =       element de menú seleccionable
 label          =       etiqueta
 passwordtext   =       text de contrasenya
-radiomenuitem  =       element de menú ràdio
+radiomenuitem  =       element de menú d'opció
 textcontainer  =       contenidor de text
-togglebutton   =       botó d'alternança
-treetable      =       taula arbre
+togglebutton   =       botó de commutació
+treetable      =       taula d'arbre
 header         =       capçalera
 footer         =       peu
 paragraph      =       paràgraf
@@ -67,7 +67,7 @@ imagemap       =       mapa d'imatge
 listboxoption  =       opció
 listbox        =       quadre de llista
 flatequation   =       equació plana
-gridcell       =       graella
+gridcell       =       cel·la de graella
 note           =       nota
 figure         =       figura
 definitionlist =       llista de definició
@@ -94,11 +94,10 @@ listEnd        =       Darrer element
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 element;#1 elements
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S de %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S de %2$S
 
 # Landmark announcements
 banner         =       bàner
@@ -108,17 +107,14 @@ main           =       principal
 navigation     =       navegació
 search         =       cerca
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S amb %S i %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 columna;#1 columnes
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = amb 1 columna;amb #1 columnes
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 fila;#1 files
+tblRowInfo = i 1 fila;i #1 files
 
 # table or grid cell information
 columnInfo = Columna %S
@@ -190,18 +186,85 @@ quicknav_Table       = Taules
 quicknav_Checkbox    = Caselles de selecció
 
 # Shortened role names for braille
-linkAbbr           =       enl
-pushbuttonAbbr     =       botó
-passwordtextAbbr   =       txtcontr
-imagemapAbbr       =       mapimg
-figureAbbr         =       fig
-textareaAbbr       =       àreatxt
+menubarAbbr        =       barra de menú
+scrollbarAbbr      =       barra de desplaçament
+gripAbbr           =       control
+alertAbbr          =       alerta
+menupopupAbbr      =       menú emergent
+documentAbbr       =       document
+paneAbbr           =       tauler
+dialogAbbr         =       diàleg
+separatorAbbr      =       separador
+toolbarAbbr        =       barra d'eines
+statusbarAbbr      =       barra d'estat
 tableAbbr          =       taul
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       capçalera de la columna
+rowheaderAbbr      =       capçalera de la fila
+columnAbbr         =       columna
+rowAbbr            =       fila
+cellAbbr           =       cel·la
+linkAbbr           =       enl
+listAbbr           =       llista
+listitemAbbr       =       element de llista
+outlineAbbr        =       contorn
+outlineitemAbbr    =       element de contorn
+pagetabAbbr        =       pestanya
+propertypageAbbr   =       pàgina de propietats
+graphicAbbr        =       gràfic
+pushbuttonAbbr     =       botó
+checkbuttonAbbr    =       botó casella
+radiobuttonAbbr    =       botó d'opció
+comboboxAbbr       =       quadre combinat
+progressbarAbbr    =       barra de progrés
+sliderAbbr         =       lliscador
+spinbuttonAbbr     =       botó incremental
+diagramAbbr        =       diagrama
+animationAbbr      =       animació
+equationAbbr       =       equació
+buttonmenuAbbr     =       botó de menú
+whitespaceAbbr     =       espai en blanc
+pagetablistAbbr    =       llista de pestanyes
+canvasAbbr         =       llenç
+checkmenuitemAbbr  =       element de menú seleccionable
+labelAbbr          =       etiqueta
+passwordtextAbbr   =       txtcontr
+radiomenuitemAbbr  =       element de menú d'opció
+textcontainerAbbr  =       contenidor de text
+togglebuttonAbbr   =       botó de commutació
+treetableAbbr      =       taula d'arbre
+headerAbbr         =       capçalera
+footerAbbr         =       peu
+paragraphAbbr      =       paràgraf
+entryAbbr          =       entrada
+captionAbbr        =       llegenda
+headingAbbr        =       encapçalament
+sectionAbbr        =       secció
+formAbbr           =       formulari
+comboboxlistAbbr   =       llista de quadre combinat
+comboboxoptionAbbr =       opció de quadre combinat
+imagemapAbbr       =       mapimg
+listboxoptionAbbr  =       opció
+listboxAbbr        =       quadre de llista
+flatequationAbbr   =       equació plana
+gridcellAbbr       =       cel·la de graella
+noteAbbr           =       nota
+figureAbbr         =       fig
+definitionlistAbbr =       llista de definició
+termAbbr           =       terme
+definitionAbbr     =       definició
+textareaAbbr       =       àreatxt
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1f;#1f
+tblRowInfoAbbr = #1f;#1f
 cellInfoAbbr = c%Sf%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
