--- a/ca/dom/chrome/dom/dom.properties
+++ b/ca/dom/chrome/dom/dom.properties
@@ -208,3 +208,4 @@ KeyNameZoomWarning=El valor «Zoom» de KeyboardEvent.key està en desús i se'n
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=Els valors de KeyboardEvent.key que comencen per «Dead» estan en desús i es fusionaran a «Dead». Per obtenir més informació, vegeu https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=La importació de nodes XUL en un document de contingut està en desús. Aquesta funcionalitat s'eliminarà aviat.
+XMLDocumentLoadPrincipalMismatch=No es pot utilitzar document.load en documents que provenen d'altres finestres. Només la finestra en la qual s'ha creat el document pot cridar .load per al document. Preferiblement, utilitzeu XMLHttpRequest.
