--- a/ca/dom/chrome/security/csp.properties
+++ b/ca/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = S'ha blocat un intent d'executar codi JavaScript des d
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = S'està interpretant %1$S com nom d'ordinador central, no com paraula clau. Si volíeu que fos una paraula clau, utilitzeu '%2$S' (entre cometes simples).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = No s'admet la directiva «%1$S». La directiva i els valors s'ignoraran.
 
 # CSP Errors:
 policyURINotAlone = La directiva «policy-uri» només pot aparèixer sola
