--- a/ca/dom/chrome/xslt/xslt.properties
+++ b/ca/dom/chrome/xslt/xslt.properties
@@ -6,7 +6,7 @@
 2  = L'anàlisi d'una expressió XPath ha fallat.
 3  = 
 4  = La transformació XSLT ha fallat.
-5  = XSLT/Xpath ha intentat cridar una funció desconeguda.
+5  = La funció XSLT/XPath no és vàlida.
 6  = El full d'estil XSLT conté (possiblement) una recursió.
 7  = El valor de l'atribut és il·legal en XSLT 1.0.
 8  = S'esperava que una expressió XPath retornés un NodeSet.
@@ -14,7 +14,7 @@
 10 = S'ha produït un error de xarxa en carregar un full d'estil XSLT:
 11 = Un full d'estil XSLT no té cap tipus MIME XML:
 12 = Un full d'estil XSLT s'importa o s'inclou, directament o indirectament, a ell mateix:
-13 = S'ha cridat una funció Xpath amb el nombre d'arguments incorrectes.
+13 = S'ha cridat una funció XPath amb un nombre d'arguments incorrecte.
 14 = S'ha cridat una funció d'una extensió XPath desconeguda.
 15 = Error d'anàlisi de XPath: s'esperava «)»:
 16 = Error d'anàlisi de XPath: l'eix no és vàlid:
