--- a/ca/mobile/android/chrome/browser.properties
+++ b/ca/mobile/android/chrome/browser.properties
@@ -7,8 +7,12 @@ addonsConfirmInstall.install=Instal·la
 
 # Alerts
 alertAddonsDownloading=Baixada del complement
-alertAddonsInstalledNoRestart=La instal·lació ha acabat
 alertAddonsFail=Ha fallat la instal·lació
+alertAddonsInstalledNoRestart.message=La instal·lació ha acabat
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=COMPLEMENTS
 
 alertDownloadsStart2=La baixada s'està iniciant
 alertDownloadsDone2=Ha acabat la baixada
@@ -19,6 +23,9 @@ alertDownloadsToast=S'ha iniciat la baixada...
 alertDownloadsPause=Pausa
 alertDownloadsResume=Reprèn
 alertDownloadsCancel=Cancel·la
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=En les sessions de convidat, les baixades estan desactivades
 
 alertFullScreenToast=Premeu el botó Enrere per sortir de la pantalla completa
 
@@ -116,6 +123,35 @@ contacts.ask=Voleu permetre que %S accedeixi als vostres contactes?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=No ho tornis a demanar per a aquest lloc
 
+# Device Storage API
+deviceStorageMusic.allow=Permet
+deviceStorageMusic.dontAllow=No ho permetis
+deviceStorageMusic.ask=Voleu permetre que %S accedeixi a la vostra música?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=No ho tornis a demanar per a aquest lloc
+
+deviceStoragePictures.allow=Permet
+deviceStoragePictures.dontAllow=No ho permetis
+deviceStoragePictures.ask=Voleu permetre que %S accedeixi a les vostres imatges?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=No ho tornis a demanar per a aquest lloc
+
+deviceStorageSdcard.allow=Permet
+deviceStorageSdcard.dontAllow=No ho permetis
+deviceStorageSdcard.ask=Voleu permetre que %S accedeixi a l'emmagatzematge extern?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=No ho tornis a demanar per a aquest lloc
+
+deviceStorageVideos.allow=Permet
+deviceStorageVideos.dontAllow=No ho permetis
+deviceStorageVideos.ask=Voleu permetre que %S accedeixi als vostres vídeos?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=No ho tornis a demanar per a aquest lloc
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -175,7 +211,11 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=Text copiat al porta-retalls
 
 # Casting
-casting.prompt=Transmet al dispositiu
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Envia a un dispositiu
+casting.mirrorTab=Duplica la pantalla
+casting.mirrorTabStop=Atura la duplicació
 
 # Context menu
 contextmenu.openInNewTab=Obre l'enllaç en una pestanya nova
@@ -209,7 +249,9 @@ contextmenu.unmute=Activa el so
 contextmenu.saveVideo=Desa el vídeo
 contextmenu.saveAudio=Desa l'àudio
 contextmenu.addToContacts=Afegeix als contactes
-contextmenu.castToScreen=Transmet a la pantalla
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Envia a un dispositiu
 
 contextmenu.copy=Copia
 contextmenu.cut=Retalla
@@ -341,3 +383,9 @@ browser.menu.context.mailto = Correu
 # "Subscribe to page" prompts created in FeedHandler.js
 feedHandler.chooseFeed=Trieu el canal
 feedHandler.subscribeWith=Subscriu-m'hi amb
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S està en desús. Utilitzeu %S
