--- a/ca/mobile/android/chrome/webapp.properties
+++ b/ca/mobile/android/chrome/webapp.properties
@@ -55,3 +55,5 @@ retrievalFailedTitle=#1 actualització ha fallat;#1 actualitzacions han fallat
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=No s'ha pogut baixar l'actualització per a: %1$S;No s'han pogut baixar les actualitzacions per a: %1$S
+
+webappsDisabledInGuest=No es poden instal·lar aplicacions en sessions de convidat
