--- a/ca/security/manager/chrome/pipnss/nsserrors.properties
+++ b/ca/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=La contrasenya s'ha blocat.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Error desconegut PKCS #11.
 SEC_ERROR_BAD_CRL_DP_URL=URL no vàlida o no suportada al punt de distribució CRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=El certificat s'ha signat amb un algoritme que s'ha inhabilitat perquè no és segur.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=El servidor utilitza la fixació de claus (HPKP) però no s'ha pogut construir cap cadena de certificat que coincideixi amb el conjunt de claus fixes. Les infraccions de fixació de claus no es poden ometre.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=El servidor utilitza un certificat amb una extensió de restriccions bàsiques que l'identifica com a entitat certificadora. Això no hauria de passar amb un certificat que s'hagi emès correctament.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=El servidor ha presentat un certificar que té una mida de clau massa petita per establir una connexió segura.
