--- a/ca/toolkit/chrome/global/aboutSupport.properties
+++ b/ca/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = No s'han trobat paràmetres ClearType
 adapterDescription = Descripció de l'adaptador
 adapterVendorID = ID del proveïdor
 adapterDeviceID = ID del dispositiu
+adapterSubsysID = ID del subsistema
 adapterDrivers = Controladors de l'adaptador
 adapterRAM = RAM de l'adaptador
 driverVersion = Versió del controlador
@@ -71,6 +72,7 @@ driverDate = Data del controlador
 adapterDescription2 = Descripció de l'adapter (GPU #2)\u0020
 adapterVendorID2 = Identificador del fabricant (GPU #2)\u0020
 adapterDeviceID2 = Identificador del dispositiu (GPU #2)
+adapterSubsysID2 = ID del subsistema (GPU #2)
 adapterDrivers2 = Controladors de l'adaptador (GPU #2)
 adapterRAM2 = Memòria RAM (GPU #2)
 driverVersion2 = Versió del controlador (GPU #2)
