--- a/ca/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/ca/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -157,12 +157,12 @@ showAllSearchResults=Mostra un resultat;Mostra tots els #1 resultats
 
 #LOCALIZATION NOTE (addon.purchase.label) displayed on a button in the list
 # view, %S is the price of the add-on including currency symbol
-addon.purchase.label=Purchase for %S…
+addon.purchase.label=Compra'l per %S…
 addon.purchase.tooltip=Visiteu la galeria de complements per comprar-lo
 #LOCALIZATION NOTE (cmd.purchaseAddon.label) displayed on a button in the detail
 # view, %S is the price of the add-on including currency symbol
 cmd.purchaseAddon.label=Compra'l per %S…
-cmd.purchaseAddon.accesskey=r
+cmd.purchaseAddon.accesskey=u
 
 #LOCALIZATION NOTE (eulaHeader) %S is name of the add-on asking the user to agree to the EULA
 eulaHeader=El %S necessita que accepteu l'acord de llicència d'usuari final següent abans que es pugui procedir amb la instal·lació:
