--- a/ca/webapprt/webapprt/webapp.properties
+++ b/ca/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Instal·la l'aplicació %S
 webapps.install.description=Voleu instal·lar l'aplicació %S?
 webapps.install.install=Instal·la l'aplicació
 webapps.install.dontinstall=No la instal·lis
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Desinstal·la: %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Voleu desinstal·lar l'aplicació «%S»?
+webapps.uninstall.uninstall=Desinstal·la l'aplicació
+webapps.uninstall.dontuninstall=No la desinstal·lis
 
 paymentDialog.title=Pagament
 paymentDialog.message=Quin proveïdor de pagaments voleu utilitzar?
