--- a/ca/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ca/browser/chrome/browser/devtools/scratchpad.properties
@@ -103,3 +103,13 @@ scratchpad.panelLabel=Subfinestra Bloc de proves
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
 # window.
 scratchpad.tooltip=Bloc de proves
+
+# LOCALIZATION NOTE (selfxss.msg): the text that is displayed when
+# a new user of the developer tools pastes code into the console
+# %1 is the text of selfxss.okstring
+selfxss.msg=Avís de frau: Aneu amb compte quan enganxeu coses que no enteneu. Això podria permetre als atacants robar la vostra identitat o prendre el control de l'ordinador. Escriviu «%S» a continuació per poder enganxar.
+
+# LOCALIZATION NOTE (selfxss.msg): the string to be typed
+# in by a new user of the developer tools when they receive the sefxss.msg prompt.
+# Please avoid using non-keyboard characters here
+selfxss.okstring=permet enganxar
