--- a/ca/browser/chrome/browser/loop/loop.properties
+++ b/ca/browser/chrome/browser/loop/loop.properties
@@ -6,34 +6,264 @@
 
 share_link_header_text=Compartiu aquest enllaç per convidar algú a la conversa:
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Qui esteu convidant?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=La invitació caducarà d'aquí {{expiry_time}} dia;La invitació caducarà d'aquí {{expiry_time}} dies
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=La invitació caducarà d'aquí {{expiry_time}} hora;La invitació caducarà d'aquí {{expiry_time}} hores
+
 # Status text
+display_name_guest=Convidat
 display_name_dnd_status=No molesteu
 display_name_available_status=Disponible
 
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 unable_retrieve_url=No s'ha pogut recuperar un URL de trucada.
+session_expired_error_description=La sessió ha caducat. Ja no funcionarà cap dels URL que hàgiu creat i compartit prèviament.
+could_not_authenticate=No s'ha pogut autenticar
+password_changed_question=Heu canviat la contrasenya?
+try_again_later=Torneu-ho a provar més tard
+could_not_connect=No s'ha pogut connectar al servidor
+check_internet_connection=Comproveu la connexió a Internet
+login_expired=La sessió ha caducat
+service_not_available=El servei no està disponible ara mateix
+problem_accessing_account=S'ha produït un problema en accedir al vostre compte
+
+## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
+## the appropriate action.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
+retry_button=Reintenta
+
+share_email_subject3=Us han convidat a una conversa
+## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body3=Per acceptar la invitació, copieu l'enllaç o feu-hi clic per iniciar la conversa:\r\n\r\n{{callUrl}}
+share_button=Correu electrònic
+copy_url_button=Copia
+copied_url_button=S'ha copiat
+
+panel_footer_signin_or_signup_link=Inici de sessió o registre
+
+settings_menu_item_account=Compte
+settings_menu_item_settings=Paràmetres
+settings_menu_item_signout=Finalitza la sessió
+settings_menu_item_signin=Inicia la sessió
+settings_menu_button_tooltip=Paràmetres
+
+# Contact Strings (Panel)
+
+## LOCALIZATION NOTE(contacts_search_placeholder): This is the placeholder text for
+## the search field at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+contacts_search_placesholder=Cerca…
+
+## LOCALIZATION NOTE (new_contact_button): This is the button to open the
+## new contact sub-panel.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where this appears on the UI
+new_contact_button=Contacte nou
+## LOCALIZATION NOTE (new_contact_name_placeholder, new_contact_email_placeholder):
+## These are the placeholders for the fields for entering a new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+new_contact_name_placeholder=Nom
+new_contact_email_placeholder=Correu electrònic
+## LOCALIZATION NOTE (add_contact_button):
+## This is the button to actually add the new contact
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## and click the 'New Contact' button to see the fields.
+add_contact_button=Afegeix el contacte
+### LOCALIZATION NOTE (valid_email_text_description): This is displayed when
+### the user enters an invalid email address, preventing the addition of the
+### contact.
+valid_email_text_description=Escriviu una adreça electrònica vàlida
+
+## LOCALIZATION NOTE (add_or_import_contact_title): This is the subtitle of the panel
+## at https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+add_or_import_contact_title=Afegeix o importa contactes
+## LOCALIZATION NOTE (import_contacts_button, importing_contacts_progress_button):
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+## for where these appear on the UI
+import_contacts_button=Importa
+importing_contacts_progress_button=S'està important…
+## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
+## importing_contacts_button once contacts have been imported once.
+sync_contacts_button=Sincronitza els contactes
+## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
+## contacts fails. This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description_simple=Ha fallat la importació de contactes
+## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
+## fails and the user may need more help. In this item, don't translate the part between
+## {{..}} because this will be replaced by the label from import_failed_support_link_label.
+## This is displayed in the error field here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+import_failed_description=Ha fallat la importació de contactes, visiteu el {{import_failed_support_link_label}} per obtenir ajuda
+import_failed_support_link_label=lloc d'assistència
+
+## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Elimina el contacte
+## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
+## to confirm deletion of a contact.
+confirm_delete_contact_alert=Esteu segur que voleu eliminar aquest contacte?
+## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
+## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Elimina el contacte
+confirm_delete_contact_cancel_button=Cancel·la
+
+## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to block a contact from calling
+## the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+block_contact_menu_button=Bloca el contacte
+## LOCALIZATION NOTE(unblock_contact_menu_button): Displayed in the contact list in
+## a pop-up menu next to the contact's name, used to unblock a contact and allow them
+## to call the user. https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+unblock_contact_menu_button=Desbloca el contacte
+
+## LOCALIZATION NOTE(edit_contact_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_menu_button=Edita el contacte…
+## LOCALIZATION NOTE(edit_contact_tile): This is the subtitle of the edit contact
+## panel. It is displayed when Edit Contact is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_title=Edita el contacte
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These fields are display when the Edit Contact button is selected.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_name_label=Nom
+edit_contact_email_label=Correu electrònic
+## LOCALIZATION NOTE(edit_contact_name_label, edit_contact_email_label):
+## These button is displayed when the Edit Contact button is selected and is used
+## to accept the change.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+edit_contact_done_button=Fet
+
+## LOCALIZATION NOTE(audio_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+audio_call_menu_button=Conversa d'àudio
+
+## LOCALIZATION NOTE(video_call_menu_button): Displayed in the contact list in a
+## pop-up menu next to the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+video_call_menu_button=Conversa de vídeo
 
 # Conversation Window Strings
 
-incoming_call_title=Trucada entrant…
-incoming_call=Trucada entrant
-incoming_call_answer_button=Respon
-incoming_call_decline_button=Rebutja
-incoming_call_ignore_button=Ignora
+initiate_call_button_label2=Esteu a punt per iniciar la conversa?
+incoming_call_title2=Sol·licitud de conversa
+incoming_call_accept_button=Accepta
+incoming_call_accept_audio_only_tooltip=Accepta, amb veu
+incoming_call_cancel_button=Cancel·la
+incoming_call_cancel_and_block_button=Cancel·la i bloca
 incoming_call_block_button=Bloca
 hangup_button_title=Penja
+hangup_button_caption2=Surt
 mute_local_audio_button_title=Silencia el vostre àudio
 unmute_local_audio_button_title=Activa el vostre àudio
 mute_local_video_button_title=Desactiva el vostre vídeo
 unmute_local_video_button_title=Activa el vostre vídeo
 
-peer_ended_conversation=L'interlocutor ha finalitzat la conversa.
-call_has_ended=Ha finalitzat la trucada.
-close_window=Tanca aquesta finestra
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Conversa amb {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Voleu iniciar la conversa?
+initiate_audio_video_call_button2=Inicia
+initiate_audio_video_call_tooltip2=Inicia una conversa de vídeo
+initiate_audio_call_button2=Conversa de vídeo
+initiate_call_cancel_button=Cancel·la
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=S'està connectant…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Està trucant…
+
+peer_ended_conversation2=La persona a qui heu trucat ha finalitzat la conversa.
+conversation_has_ended=La conversa ha acabat.
+restart_call=Torna a unir-m'hi
+
+generic_failure_title=Alguna cosa ha anat malament.
+generic_failure_with_reason2=Podeu tornar-ho a provar o enviar un enllaç per correu electrònic mitjançant el qual se us podrà trucar més tard.
+generic_failure_no_reason2=Voleu tornar-ho a provar?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Aquesta persona no està en línia
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=La trucada no s'ha realitzat correctament.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Reintenta
+email_link_button=Envia un enllaç
+cancel_button=Cancel·la
 
 cannot_start_call_session_not_ready=No es pot iniciar la trucada, la sessió no està preparada.
 network_disconnected=La connexió de xarxa s'ha interromput sobtadament.
-
 connection_error_see_console_notification=Ha fallat la trucada; vegeu la consola per a més informació.
-## LOCALIZATION NOTE (legal_text_and_links): In this item, don't translate the
-## part between {{..}}
-legal_text_and_links=En utilitzar aquest producte, accepteu les <a target="_blank" href="{{terms_of_use_url}}">condicions d'ús</a> i la <a href="{{privacy_notice_url}}">política de privadesa</a>.
+
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
+## parts between {{..}} because these will be replaced with links with the labels
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=En utilitzar el {{clientShortname}}, accepteu les {{terms_of_use}} i l'{{privacy_notice}}.
+legal_text_tos = condicions d'ús
+legal_text_privacy = avís de privadesa
+client_shortname_fallback=producte
+
+feedback_call_experience_heading2=Com ha anat la conversa?
+feedback_what_makes_you_sad=Què no us ha agradat?
+feedback_thank_you_heading=Gràcies per la vostra opinió
+feedback_category_audio_quality=Qualitat de l'àudio
+feedback_category_video_quality=Qualitat del vídeo
+feedback_category_was_disconnected=S'ha desconnectat
+feedback_category_confusing=És confús
+feedback_category_other=Altres:
+feedback_custom_category_text_placeholder=Què no ha anat bé?
+feedback_submit_button=Envia
+feedback_back_button=Enrere
+## LOCALIZATION NOTE (feedback_window_will_close_in2):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+feedback_window_will_close_in2=Aquesta finestra es tancarà d'aquí {{countdown}} segon;Aquesta finestra es tancarà d'aquí {{countdown}} segons
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Torna a unir-m'hi
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Denuncia l'usuari
