--- a/ca/browser/chrome/browser/newTab.properties
+++ b/ca/browser/chrome/browser/newTab.properties
@@ -5,6 +5,26 @@
 newtab.pin=Fixa aquest lloc en aquesta posició
 newtab.unpin=No fixis aquest lloc
 newtab.block=Suprimeix aquest lloc
-newtab.show=Mostra la pàgina de pestanya nova
-newtab.hide=Amaga la pàgina de pestanya nova
-newtab.sponsored=Mostra informació sobre els mosaics patrocinats
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=PATROCINAT
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Aquest mosaic se us mostra en nom d'un soci de Mozilla. Podeu eliminar-lo fent clic al botó %1$S. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=Un soci de Mozilla ha millorat la visualització d'aquest mosaic i s'ha reemplaçat la captura de pantalla. Podeu desactivar els mosaics millorats fent clic al botó %1$S de les preferències. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=En obrir una pestanya nova, veureu mosaics dels llocs que visiteu freqüentment, així com mosaics que creiem que us poden interessar. És possible que alguns estiguin patrocinats per socis de Mozilla. Sempre se us indicarem els mosaics que estiguin patrocinats. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Per proporcionar aquest servei, Mozilla recull i utilitza informació estadística sobre la forma en què utilitzeu els mosaics, d'acord amb el nostre %1$S.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=Podeu desactivar la funció de mosaic fent clic al botó %1$S de les preferències.
+newtab.learn.link=Més informació…
+newtab.privacy.link=avís de privadesa
