--- a/ca/browser/chrome/browser/shellservice.properties
+++ b/ca/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,20 @@
 
 optionsLabel=&Opcions del %S
 safeModeLabel=%S en mode &segur
-setDefaultBrowserTitle=Navegador per defecte
-setDefaultBrowserMessage=Actualment el %S no és el vostre navegador per defecte. Voleu fer que ho sigui?
-setDefaultBrowserDontAsk=Fes aquesta comprovació sempre que s'iniciï el %S.
-alreadyDefaultBrowser=El %S ja està definit com el vostre navegador per defecte.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Definiu el %S com a navegador per defecte per treure'n el màxim profit
+setDefaultBrowserConfirm.label     = Fes que el %S sigui el navegador per defecte
+setDefaultBrowserConfirm.accesskey = F
+setDefaultBrowserOptions.label     = Opcions
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = Ara no
+setDefaultBrowserNotNow.accesskey  = n
+setDefaultBrowserNever.label       = No m'ho tornis a demanar
+setDefaultBrowserNever.accesskey   = d
+
+
 desktopBackgroundLeafNameWin=Fons escriptori.bmp
 DesktopBackgroundDownloading=S'està desant la imatge…
 DesktopBackgroundSet=Defineix com a fons d'escriptori
