[S] loop: Bug 1081322: add string for new contacts phone number editing

--- a/it/browser/chrome/browser/loop/loop.properties
+++ b/it/browser/chrome/browser/loop/loop.properties
@@ -42,6 +42,7 @@ new_contact_button = Nuovo contatto
 new_contact_name_placeholder = Nome
 new_contact_email_placeholder = Email
 contacts_blocked_contacts = Contatti bloccati
+new_contact_phone_placeholder = Telefono Firefox OS
 add_contact_button = Aggiungi contatto
 valid_email_text_description = Inserire un indirizzo email valido
 add_or_import_contact_title = Aggiungi o importa contatto
