[S] toolkit: Bug 1063702 - Update all Reset Firefox strings and relevant UI to new UX requirements

--- a/it/toolkit/chrome/global/resetProfile.properties
+++ b/it/toolkit/chrome/global/resetProfile.properties
@@ -3,5 +3,5 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 resetUnusedProfile.message = Sembra che %S non venga utilizzato da un po’ di tempo. Procedere con un’operazione di pulizia per garantire una migliore esperienza? A proposito, bentornato.
-resetProfile.resetButton.label = Ripristina %S…
-resetProfile.resetButton.accesskey = R
+refreshProfile.resetButton.label = Ripristina %S…
+refreshProfile.resetButton.accesskey = R
