[browseer]Bug 1079430 - Land the new Loop strings for Firefox 35

--- a/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fr/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,8 @@ quit-button.tooltiptext.linux2 = Quitter %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Quitter %1$S (%2$S)
 
-loop-call-button.label = Inviter quelqu'un à discuter
-loop-call-button.tooltiptext = Inviter quelqu'un à discuter
+loop-call-button2.label = Démarrer une conversation
+loop-call-button2.tooltiptext = Démarrer une conversation
 
 social-share-button.label = Partager cette page
 social-share-button.tooltiptext = Partager cette page
