--- a/fr/browser/chrome/browser/browser.properties
+++ b/fr/browser/chrome/browser/browser.properties
@@ -604,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = N
 customizeTips.tip0 = %1$S : Vous pouvez personnaliser %2$S pour qu'il s'adapte à vous. Faites simplement glisser l'un des éléments ci-dessus dans le menu ou la barre d'outils. %3$S sur la personnalisation de %2$S.
 customizeTips.tip0.hint = Astuce
 customizeTips.tip0.learnMore = En savoir plus
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Redémarrer %S pour appliquer les mises à jour
+appmenu.updateFailed.description = La mise à jour en arrière-plan a échoué, veuillez télécharger la mise à jour
+appmenu.restartBrowserButton.label = Redémarrer %S
+appmenu.downloadUpdateButton.label = Télécharger la mise à jour
